# ICG_FinalProject

./: CMakeLists.txt
dog/: readme.txt  shiba.glb.mtl
src/: CMakeLists.txt  main.cpp  shader.cpp  stb_image.cpp
src/header/: Object.h  cube.h  shader.h
